tests/fixtures/errors/interp_variant.z
color: variant {
    red: null
    green: null
}

main: function is {
    c: color.red
    print "c=\{c} end"
}
